--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -510,14 +510,13 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "Portugal") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   #geom_violin(position="dodge", alpha=0.5, outlier.colour="transparent") + 
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
        title = "Suicide Rates of Portugal By Year (Organized by Sex)")
-  
 ```
 
 ```{r china-bar-plot}
