Fix all bar plots (alpha value)

--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -548,8 +548,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "China") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
@@ -566,8 +566,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "Brazil") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
@@ -581,8 +581,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "Costa Rica") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
@@ -597,8 +597,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "Israel") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
@@ -613,8 +613,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "Mexico") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
@@ -629,8 +629,8 @@ suicide_2 %>%
   full_join(whr_2, by = join_by(country, year)) %>%
   filter(country == "New Zealand") %>%
   group_by(year) %>%
-  ggplot(aes(x = year, y= suicide_rates , fill = sex, alpha = 0.8)) +
-  geom_bar(position="dodge", stat="identity") +
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
   scale_fill_viridis_d() +
    labs(x = "Year",
        y = "Suicide Rates",
