--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -648,6 +648,40 @@ suicide_2 %>%
        title = "Suicide Rates of New Zealand By Year (Organized by Sex)")
 ```
 
+```{r}
+suicide_2 %>%
+   filter(sex %in% c("Female", "Male") &
+         age_group == "All Ages") %>%
+  full_join(whr_2, by = join_by(country, year)) %>%
+  filter(country %in% c("New Zealand", "Zimbabwe", "Portugal", "Brazil", "China", "Mexico", "Israel")) %>%
+  group_by(year) %>%
+  ggplot(aes(x = as.numeric(year), y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity",) +
+  scale_fill_viridis_d() +
+   facet_wrap(~ country, ncol = 2) +
+   labs(x = "Year",
+       y = "Suicide Rates",
+       title = "Suicide Rates of Randomly Selected Countries")
+```
+
+
+```{r lesotho-outlier-barplot}
+suicide_2 %>%
+   filter(sex %in% c("Female", "Male") &
+         age_group == "All Ages") %>%
+  full_join(whr_2, by = join_by(country, year)) %>%
+  filter(country == "Lesotho") %>%
+  group_by(year) %>%
+  ggplot(aes(x = year, y= suicide_rates , fill = sex)) +
+  geom_bar(position="dodge", stat="identity", alpha = 0.8) +
+  scale_fill_viridis_d() +
+   labs(x = "Year",
+       y = "Suicide Rates",
+       title = "Suicide Rates of Lesotho By Year (Organized by Sex)")
+
+```
+
+
 ## Presentation
 
 
