--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -403,7 +403,7 @@ visdat::vis_miss(whr)
 ```
 
 
-```{r suicide-vs-GDP-scatter, fig.alt= "This faceted scatterplot looks at the correlation of three variables: suicide rates on the Y axis in regards to GDP on the X axis, and then WHR happiness scores that are being represented in a color gradient. Low happiness scores are expressed with deep purple and blue (3-4), mid-range scores are expressed with lighter blue and green (5-6), and high happiness scores are expressed with bright green and yellow (>=7). Though the correlation between suicide rates and GDP per capita don't appear to be strong, there's a concentration on higher suicide rates in countries that have mid-range happiness scores and GDP per capita between 1 and 1.5."  }
+```{r suicide-vs-GDP-scatter, fig.alt="This faceted scatterplot looks at the correlation of three variables: suicide rates on the Y axis in regards to GDP on the X axis, warning=FALSE, and then WHR happiness scores that are being represented in a color gradient. Low happiness scores are expressed with deep purple and blue (3-4), mid-range scores are expressed with lighter blue and green (5-6), and high happiness scores are expressed with bright green and yellow (>=7). Though the correlation between suicide rates and GDP per capita don't appear to be strong}
 
  suicide_2 %>%
   filter(sex == "Both sexes",
@@ -421,9 +421,13 @@ ggplot() +
               method = "lm") +
   labs(x = "GDP per capita", 
        y = "Suicide Rates", 
-       title = "Correlation between GDP per capita and Suicide Rates (WHR 2015-2019)") +
+       color = "WHR Happiness Score",
+       title = "Correlation between GDP per capita and Suicide Rates",
+       subtitle = " Between 2015-2019") +
   facet_wrap(~ year, ncol = 2) +
-  scale_color_viridis_c()
+  scale_color_viridis_c() +
+  jpeg(filename = "suicide-vs-GDP-scatter.jpeg" )
+
 ```
 
 ```{r attempt-violinplot}
