--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -264,7 +264,7 @@ suicide_2 <- suicide %>% dplyr::right_join(suicide_complete)
 
 ## Visualizations
 
-```{r whr-gdp-happiness, fig.alt= "This faceted scatter plot represents the correlation between GDP per capita and Happiness score (years 2015-2019), which appears to have a positive correlation. The data shows us that higher GDP per capita usually correlates to higher happiness scores." }
+```{r whr-gdp-happiness, fig.alt= "This gif shows the correlation between GDP per capita and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. That means higher GDP per capita correlates with higher happiness scores." }
 
 gdp_per_capita_1 <- ggplot(whr_2, aes(x = gdp_per_capita, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -285,7 +285,7 @@ gdp_per_capita_2 <- animate(gdp_per_capita_1, nframes = 5, fps = 1.5, renderer =
 anim_save(filename = "gdp_per_capita_happiness.gif")
 ```
 
-```{r whr-social-support-happiness, fig.alt= ""This faceted scatter plot represents the correlation between access to social supports and Happiness score for years 2015-2019.These two variables appear to have a positive correlation. The data shows us that more social supports usually correlate to higher happiness scores."}
+```{r whr-social-support-happiness, fig.alt= ""This gif shows the correlation between access to social support and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. That means more social supports usually correlates with higher happiness scores."}
 
 social_support_1 <- ggplot(whr_2, aes(x = social_support, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -306,7 +306,7 @@ social_support_2 <- animate(social_support_1, nframes = 5, fps = 1.5, renderer =
 anim_save(filename = "social_support_happiness.gif")
 ```
 
-```{r whr-life-expectancy-happiness, fig.alt= "This faceted scatter plot represents the correlation between life expectancy and Happiness score (years 2015-2019), which appears to have a positive correlation. The data shows us that longer life expectancies usually correlates to higher happiness scores."}
+```{r whr-life-expectancy-happiness, fig.alt= "This gif shows the correlation between life expectancy and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. This means that longer life expectancies usually correlate with higher happiness scores."}
 
 life_expectancy_1 <- ggplot(whr_2, aes(x = life_expectancy, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -327,7 +327,7 @@ life_expectancy_2 <- animate(life_expectancy_1, nframes = 5, fps = 1.5, renderer
 anim_save(filename = "life_expectancy_happiness.gif")
 ```
 
-```{r whr-freedom-happiness, fig.alt= "This faceted scatter plot represents the correlation between freedom ratings and Happiness score, which appears to have a positive line of average. The data shows us that there's still, although not as distinct, positive correlation between freedom and happiness scores."}
+```{r whr-freedom-happiness, fig.alt= "This gif shows the correlation between freedom ratings and the happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. This means that more freedom usually correlates with higher happiness scores."}
 
 freedom_1 <- ggplot(whr_2, aes(x = freedom, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -348,7 +348,7 @@ freedom_2 <- animate(freedom_1, nframes = 5, fps = 1.5, renderer = gifski_render
 anim_save(filename = "freedom_happiness.gif")
 ```
 
-```{r whr-generosity-happiness fig.alt= "This faceted scatter plot represents the correlation between generosity percieved by each country and Happiness score, which appears to not have a strong correlation. The data shows us that happiness scores vary between being very high and low, despite despite percieved generosity for each country."}
+```{r whr-generosity-happiness fig.alt= "This gif shows the correlation between generosity percieved by each country and the happiness score in the World Happiness Report from 2015 through 2019. The two variables have a mild positive correlation. This means that more generosity does not frequently correlate with higher happiness scores."}
 
 generosity_1 <- ggplot(whr_2, aes(x = generosity, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -393,7 +393,7 @@ anim_save(filename = "perceptions_of_corruption_happiness.gif")
 ```{r missing-values fig.alt= "This Bar Graph represents all possible missing data from our whr dataset. The X axis lists the variables that the data is organized under, and the Y axis represents number of observations. The red represents all character data, while the blue represents all numerical variables, The grey represents what variables are missing data inputs, which is 6.4% of all the data."}
 
 
-# visdat::vis_miss(suicide_2)
+visdat::vis_miss(suicide_2)
 
 visdat::vis_dat(whr)
 
