--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -44,6 +44,9 @@ library(tidyverse)
 
 install.packages("gganimate")
 library(gganimate)
+
+install.packages(viridis)
+library(viridis)
 ```
 
 ## Summary
@@ -62,11 +65,11 @@ And make sure to hide your code with  `echo = FALSE` unless the point you are tr
 Your results with proper output and graphics go in your presentation, this space is for a brief summary of your project.
 
 ```{r load-data, echo = FALSE}
-# whr_2015 <- read_csv("data/whr_2015.csv")
-# whr_2016 <- read_csv("data/whr_2016.csv")
-# whr_2017 <- read_csv("data/whr_2017.csv")
-# whr_2018 <- read_csv("data/whr_2018.csv")
-# whr_2019 <- read_csv("data/whr_2019.csv")
+whr_2015 <- read_csv("data/whr_2015.csv")
+whr_2016 <- read_csv("data/whr_2016.csv")
+whr_2017 <- read_csv("data/whr_2017.csv")
+whr_2018 <- read_csv("data/whr_2018.csv")
+whr_2019 <- read_csv("data/whr_2019.csv")
 # suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 
 
@@ -150,17 +153,13 @@ Your results with proper output and graphics go in your presentation, this space
 
 ```{r tidy-data-2019}
 
-# whr_2019 <- whr_2019 %>%
-#    mutate (Year = 2019) %>%
-#   rename("Freedom" = "Freedom to make life choices") %>%
-#    rename("Country" = "Country or region",
-#           "Life expectancy" = "Healthy life expectancy",
-#           "Happiness score" = "Score") %>%
-#   #rename("Freedom" = "freedom_to_make_life_choices") %>%
-#    #rename("Country" = "Country or region",
-#           #"Life expectancy" = "Healthy life expectancy",
-#           #"Happiness score" = "Score") %>%
-#   clean_names()
+whr_2019 <- whr_2019 %>%
+   mutate (Year = 2019) %>%
+  # rename("Freedom" = "Freedom to make life choices") %>%
+  #  rename("Country" = "Country or region",
+  #         "Life expectancy" = "Healthy life expectancy",
+  #         "Happiness score" = "Score")%>%
+   clean_names()
 ```
 
 ```{r reordering-cols-2019}
@@ -468,73 +467,116 @@ suicide_2 %>%
   filter(gdp_per_capita <= 0.5, suicide_rates <= 4)
 ```
 
+
+
 ```{r joined-datasets}
 
 sui_joined_1 <- suicide_2 %>%
-  filter(sex == "Both sexes",
-         age_group == "All Ages") %>%
-  full_join(whr_2, by = join_by(country, year)) 
-  
+  mutate(country = case_when(country == "Syria" ~ "Syrian Arab Republic",
+                           country == "USA" ~ "United States",
+                           country == "Tanzania" ~ "United Republic of Tanzania",
+                           country =="Russian Federation" ~ "Russia",
+                           country == "North Macedonia" ~ "The former Yugoslav Republic of Macedonia",
+                           country == "Laos" ~ "Lao People's Democratic Republic",
+                           country == "Cape Verde" ~ "Cabo Verde",
+                           country == "Brunei " ~ "Brunei Darussalam",
+                           country == "South Korea" ~ " Republic of Korea",
+                           country == "North Korea " ~ "Korea, Democratic People's Republic of",
+                           country == "DRC" ~ "Democratic Republic of the Congo",
+                           country == "Iran" ~ "Iran (Islamic Republic of)",
+                           country == "Moldova" ~ " Republic of Moldova",
+                           country == "Venezuela (Bolivarian Republic of)" ~ "Venezuela",
+                           country == "UAE" ~ "United Arab Emirates",
+                           country == "UK" ~ "United Kingdom",
+                           country == "Micronesia" ~ "Micronesia (Federated States of)",
+                           country == "Bolivia" ~ "Bolivia (Plurinational State of)", TRUE ~ country)) %>%
+   filter(sex == "Both sexes",
+         age_group == "All Ages",
+         year == 2019) %>%
+  full_join(whr_2019, by = join_by(country, year)) %>%
+  na.omit()
+ 
 sui_joined_1$overall_rank <- as.numeric(as.character(sui_joined_1$overall_rank))
 ```
 
 
 ```{r map-viz}
 
-download.file("http://thematicmapping.org/downloads/TM_WORLD_BORDERS_SIMPL-0.3.zip" , destfile="data/world_shape_file.zip")
-
-unzip("data/world_shape_file.zip")
+# download.file("http://thematicmapping.org/downloads/TM_WORLD_BORDERS_SIMPL-0.3.zip" , destfile="data/world_shape_file.zip")
+# 
+# unzip("data/world_shape_file.zip")
 
  library(rgdal)
-joined_1 <- readOGR(
+worldCountries <- readOGR(
   dsn= paste0(getwd(),"/TM_WORLD_BORDERS_SIMPL-0.3.shp") ,
   layer="TM_WORLD_BORDERS_SIMPL-0.3",
   verbose=FALSE)
 
 
-joined_1 <- st_as_sf(joined_1)
-joined_2 <- full_join(joined_1, sui_joined_1, by = join_by(NAME == country))
+merged_data <- merge(worldCountries, sui_joined_1, by.x = "NAME", by.y = "country", all.y = TRUE)
 
-# library(dplyr)
-# world_spdf@data$POP2005[ which(world_spdf@data$POP2005 == 0)] = NA
-# world_spdf@data$POP2005 <- as.numeric(as.character(world_spdf@data$POP2005)) / 1000000 %>% round(2)
+# worldCountries <- merge(sui_joined_1,by.x = "country", by.y = "NAME", all.x = TRUE)
 
 
 ```
+```{r creating-map}
+map <- merged_data %>% 
+      leaflet() %>%
+      addTiles() %>%
+      setView( lat=10, lng=0 , zoom=2) %>% 
+      setMaxBounds( lng1 = -180, lat1 = -87, 
+                    lng2 = 200, lat2 = 97 ) %>%
+  addPolygons(
+      data = merged_data,
+      fillColor = ~mypalette(happiness_score), 
+      stroke=TRUE, 
+      fillOpacity = 0.9,
+      color="white", 
+      weight=0.7, #size of lines
+      # label = mytext, #label text variable
+      # labelOptions = label, #label aesthetics variable
+      # highlightOptions = highlight,
+      group = "World Happiness Report") #group identifier
+  #   )  %>%
+  # addCircleMarkers(~long, ~lat, 
+  #   fillColor = ~mypalettesui(suicide_rates), fillOpacity = 0.7, color="white", radius= suicide_rates, stroke=FALSE,
+  #   label = mytext,
+  #   labelOptions = labelOptions( style = list("font-weight" = "normal", padding = "3px 8px"), textsize = "13px", direction = "auto")
+  # ) %>%
+  # addLegend( pal=mypalette, values=~mag, opacity=0.9, title = "Magnitude", position = "bottomright" )
 
-```{r}
+map
+```
 
-# m <- leaflet(joined_1) %>% 
-#   addTiles()  %>% 
-#   setView(lat=10, lng=0 , zoom=1)%>%
-#    addPolygons( fillColor = ~mypalette(POP2005), 
-#                 stroke=TRUE,
-#                 )
+```{r map-legend1}
+map 
 
-
-# joined_1 %>%
-#   leaflet() %>%
-#   addTiles() %>% 
-#   addPolygons(fillColor = -pal (overall_rank))
-
+# <- map %>%
+#   addLegend(
+#     position = "bottomright",
+#     colors = c ("#000004FF", "#450A69FF", "#85216BFF","#CF4446FF","#F1731DFF", "#FBB61AFF","#F2F27DFF"),
+#     values = ~merged_data$happiness_score,
+#     title = "World Happiness Score",
+#     label = c ("High score", "","", "Medium score", "","", "Low score"),
+#     opacity = 1)
 
 ```
 
-```{r}
-joined_2019 <- joined_2 %>%
-  filter(year == 2019)
 
-mypalette <- colorNumeric(palette="OrRd", domain=joined_2019$overall_rank, na.color="transparent")
+```{r list-color-palette}
 
+viridis::inferno(256)
 
+colors <- viridis::inferno(256)
 
-leaflet(data = joined_2019) %>%
-  addProviderTiles(providers$Esri.WorldImagery) %>%
-  setView(lng = -80, 
-          lat = 34.5, 
-          zoom = 5) %>%
-  addPolygons(fillColor = ~mypalette(overall_rank))
-  #addPolygons()
+```
+
+```{r creating-palettes}
+
+mypalette <- colorNumeric(palette= viridis(256, option = "B"), domain= merged_data$happiness_score, na.color="transparent")
+
+mypalettesui <- colorNumeric(palette= viridis(256, option = "G"), domain= merged_data$suicide_rates, na.color="transparent")
+
 ```
 
 ```{r portugal-bar-plot}
